# NEGUI2

./: CMakeLists.txt  README.md
App/: App.cpp
Sample/: main.cpp
cmake/: External.cmake  RuntimeResource.cmake  Shader.cmake
resource/: RubberDuck.stl
shader/: AABB.frag  AABB.vert  Base.frag  Base.vert  FullShader.frag  FullShader.vert  Grid.frag  Grid.vert  Line.frag  Line.vert  Mesh.frag  Mesh.vert  Point.vert  base.vert
src/App/: IModule.hpp  Main.cpp  Scene.cpp  Scene.hpp  System.cpp  System.hpp  Widget.cpp  Widget.hpp
src/NEGUI2/: Core.cpp  Core.hpp  DemoUI.cpp  DemoUI.hpp  DeviceData.cpp  DeviceData.hpp  PlotDemo.cpp  PlotDemo.hpp  TextEditDemo.cpp  TextEditDemo.hpp  UiDemo.cpp  UiDemo.hpp  Utility.cpp  Window.cpp  WindowData.hpp
src/NEGUI2/3D/: AABB.cpp  AABB.hpp  BaseDisplayObject.cpp  BaseDisplayObject.hpp  BasePickable.cpp  BaseTransform.cpp  BaseTransform.hpp  Camera.cpp  Camera.hpp  Coordinate.cpp  Coordinate.hpp  Cube.cpp  Cube.hpp  FullShader.cpp  FullShader.hpp  Grid.cpp  Grid.hpp  I3DObject.hpp  IDisplayObject.cpp  IDisplayObject.hpp  IPickable.hpp  Triangle.cpp  Triangle.hpp
src/NEGUI2/Core/: Core.cpp  Core.hpp  DeviceManager.cpp  DeviceManager.hpp  ImGuiManager.cpp  ImGuiManager.hpp  MemoryManager.cpp  MemoryManager.hpp  OffScreenManager.cpp  OffScreenManager.hpp  ScreenCommon.hpp  ScreenManager.cpp  ScreenManager.hpp  Shader.cpp  Shader.hpp  TextureManager.cpp  TextureManager.hpp  Utility.cpp  Utility.hpp  Window.cpp  Window.hpp
src/NEGUI2/ThreeD/: AABB.cpp  AABB.hpp  BaseDisplayObject.cpp  BaseDisplayObject.hpp  BasePickable.cpp  BasePickable.hpp  BaseTransform.cpp  Camera.cpp  Camera.hpp  Coordinate.cpp  Coordinate.hpp  FullShader.cpp  FullShader.hpp  Grid.cpp  Grid.hpp  Line.cpp  Line.hpp  Mesh.cpp  Mesh.hpp  Point.cpp  Point.hpp  ThreeD.cpp  ThreeD.hpp  Triangle.cpp  Triangle.hpp
src/NEGUI2/Ui/: IUserInterface.hpp  PlotDemo.cpp  PlotDemo.hpp  TextEditDemo.cpp  TextEditDemo.hpp  TextureDemo.cpp  TextureDemo.hpp  UiDemo.cpp  UiDemo.hpp
